# stellar-wizard

./: .gitignore  LICENSE  README.md  check_contract.js  final_nft_check.js  get_contract_nfts.js  get_nfts.js  package-lock.json  parse_nft_collections.js  simple_nft_parser.js
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/contracts/nft/: Cargo.toml  README.md  build.sh  deploy.sh
backend/contracts/nft/src/: lib.rs
backend/contracts/nft/tests/: nft_tests.rs
backend/scripts/: build.sh  create-collection.sh  deploy-factory.sh  deploy-nft.sh  deploy-registry.sh  deploy-testnet.sh  init-deployer.sh  lib.sh  mint-from-factory.sh  set-config.sh
front-end/: SUPABASE_SETUP.md  create-test-image.js  next.config.mjs  package-lock.json  package.json  suppress-warnings.js  tailwind.config.ts  test-base64-simple.js  test-final-variants.json  test-image-base64.txt  test-image-large.txt  test-simple-image.txt  test-valid-512.txt
front-end/app/: globals.css  layout.tsx  page.tsx
front-end/components/: AboutSection.tsx  ChatMessage.tsx  ChatPane.jsx  DeFiStrategist.tsx  HeroSection.tsx  ImageStyler.tsx  InlineImageUpload.tsx  IterativeArtworkCreator.tsx  MarkdownExample.tsx  NFTCard.tsx  NFTCreator.tsx  NFTDetailModal.tsx  ProjectionSimulator.tsx  StellarWizardLogo.tsx  ThemeToggle.tsx  TopNav.tsx  VariantArtworkCreator.tsx  WalletAuthModal.tsx
front-end/data/: creations.json  likes.json
front-end/hooks/: useLike.ts
front-end/lib/: auth.ts  blend.ts  imageValidation.ts  (+7 more)
stellar-social-sdk/: package-lock.json  package.json
(+72 files in other folders)
