[package]
name = "stellar-wizard-nft"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.2"
stellar-tokens = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }
stellar-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true